--- a/TP5/TP5/m5out/config.json
+++ b/TP5/TP5/m5out/config.json
@@ -293,7 +293,7 @@
                         "input": "cin", 
                         "ppid": 99, 
                         "type": "LiveProcess", 
-                        "cwd": "/auto/c/cathebras/ES201/TPs/TP5", 
+                        "cwd": "/auto/s/sanchez-diaz/Documents/ES201/ES201_TD4/TP5/TP5", 
                         "simpoint": 0, 
                         "euid": 100, 
                         "path": "system.cpu00.workload", 
@@ -302,12 +302,12 @@
                         "cmd": [
                             "test_omp", 
                             "32", 
-                            "40"
+                            "32"
                         ], 
                         "errout": "cerr", 
                         "useArchPT": false, 
                         "egid": 100, 
-                        "output": "/home/c/cathebras/ES201/TPs/TP5/simu/log/gem5_log_A15_M40_W8_C32"
+                        "output": "cout"
                     }
                 ], 
                 "name": "cpu00", 
@@ -935,7 +935,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -1734,7 +1734,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -2533,7 +2533,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -3332,7 +3332,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -4131,7 +4131,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -4930,7 +4930,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -5729,7 +5729,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -6528,7 +6528,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -7327,7 +7327,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -8126,7 +8126,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -8925,7 +8925,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -9724,7 +9724,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -10523,7 +10523,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -11322,7 +11322,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -12121,7 +12121,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -12920,7 +12920,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -13719,7 +13719,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -14518,7 +14518,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -15317,7 +15317,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -16116,7 +16116,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -16915,7 +16915,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -17714,7 +17714,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -18513,7 +18513,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -19312,7 +19312,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -20111,7 +20111,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -20910,7 +20910,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -21709,7 +21709,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -22508,7 +22508,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -23307,7 +23307,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -24106,7 +24106,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -24905,7 +24905,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
@@ -25704,7 +25704,7 @@
                 }, 
                 "commitToDecodeDelay": 1, 
                 "smtIQPolicy": "Partitioned", 
-                "issueWidth": 8, 
+                "issueWidth": 2, 
                 "LSQCheckLoads": true, 
                 "commitToRenameDelay": 1, 
                 "cachePorts": 200, 
